# MyCompiler

./: .gitignore  CMakeLists.txt  TODO  readme.md
src/: logger.h  main.cpp
src/common/: grammar.txt  logger.hpp  nodes.hpp  position.hpp  token.hpp  types.hpp
src/semanticsAnalyzer/: IVisitor.hpp  controlFlowChecker.cpp  controlFlowChecker.hpp  emptyVisitor.hpp  printerVisitor.cpp  printerVisitor.hpp  scopeChecker.cpp  scopeChecker.hpp  typeChecker.hpp  validator.hpp
src/syntaxAnalyzer/: AST.hpp  IParser.hpp  IVisitor.hpp  expressionParsing.tpp  grammar.txt  nodes.hpp  printerVisitor.hpp  recursiveParser.cpp  recursiveParser.hpp  recursiveParser.tpp
src/tokenizer/: CmmTokenizer.cpp  CmmTokenizer.hpp  ITokenizer.hpp  MyTokenizer.cpp  MyTokenizer.hpp  lookupTable.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
tests/: example2.c  example3.c  example_expressions.c  example_expressions_2.c  test1.c
